tests/paczka1/fuzzy1/27552939.err
Error in line 1: 4fXTsWdL6T S169 40,6
Error in line 12: 4fXTsWdL6T S634 61,0
